<resources>
    <string name="app_name">Marta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="titulo_lista_pacientes">Foram avisados %d pacientes, faltam paciente.</string>
    <string name="moved">\\\'%1$s\\\' moved to position %2$s</string>
    <string name="consultas_do_dia">Consultas do dia</string>
    <string name="agenda">Agenda</string>
    <string name="medicos">Médicos</string>
    <string name="configuracoes">Configurações</string>
    <string name="comunicao">Comunicação</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="enviar_por_email">Enviar por e-mail</string>
    <string name="lembretes">Lembretes</string>
    <string name="sinalMenor"><![CDATA[<]]></string>
    <string name="nome">Nome</string>
    <string name="especialidade">Especialidade</string>
    <string name="nenhum_medico_cadastrado">Nenhum médico cadastrado</string>
    <string name="nenhum_paciente_cadastrado">Nenhum paciente cadastrado</string>
    <string name="adicionar_medico">Adicionar médico</string>
    <string name="novo_medico">Novo médico</string>
    <string name="novo_paciente">Novo paciente</string>
    <string name="adicionar_medico_ln">Adicionar\n médico</string>
    <string name="remover_medico">Remover\n médico</string>
    <string name="cancelar">Cancelar</string>
    <string name="medico_list_check_intrucoes">Selecione os médicos que iram fazer a consula nesse dia.</string>
    <string name="paciente_agendamento_list_intrucoes">Agendar pacientes que iram ser consultado.</string>
    <string name="paciente_consulta_list_intrucoes">Adicionar paciente para serem consultados, na ordem de chegada.</string>
    <string name="ok">Ok</string>
    <string name="adicionar_paciente">Adicionar\n paciente</string>
    <string name="backup_nao_encontrado">Ainda não foi feito nenhum Backup das informações.</string>
    <string name="descricao">Descrição</string>
    <string name="subdescricao">Subdescrição</string>
    <string name="deletar">Deletar</string>
    <string name="restaurar">Restaurar</string>
    <string name="backup">BackUp</string>
    <string name="backup_restaura">Backup e restaurar</string>
    <string name="criar">Criar</string>
    <string name="backup_informacoes">Backup das informações</string>
    <string name="backup_salvos">Backups salvos</string>
    <string name="sobre">Sobre</string>
    <string name="ajuda">Ajuda</string>
    <string name="manual_feedback">Manual e feedback</string>
</resources>
