<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/descricao"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/backup_criar_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_informacoes"
            android:layout_marginTop="10dp"
            android:lines="1"
            android:focusable="true"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <View
        style="@style/TopicoDivider"
        android:layout_width="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <Button
            android:id="@+id/backup_btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/backup_btn_criar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/criar" />
    </LinearLayout>

</LinearLayout>