<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/medico_list_check_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/medico_list_check_intrucoes"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium">
        <requestFocus />
    </TextView>


    <TextView
        android:id="@+id/medico_emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <ListView
        android:id="@+id/medico_listview_check"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/categoria_layout_aux"
        android:layout_below="@+id/medico_list_check_titulo"
        android:clickable="true"
        android:divider="#d4bababa"
        android:dividerHeight="2px"
        android:fadeScrollbars="false"
        android:scrollbars="horizontal"></ListView>


    <LinearLayout
        android:id="@+id/categoria_layout_aux"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/categoria_list_btn_adicionar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="30px"
            android:text="@string/novo_medico" />

        <Button
            android:layout_weight="1"
            android:id="@+id/categoria_list_btn_cancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30px"
            android:text="@string/ok" />
    </LinearLayout>

</RelativeLayout>