<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/paciente_consulta_list_medico_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Nome do Médico"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium">

        <requestFocus />
    </TextView>

    <View
        android:id="@+id/paciente_consulta_list_medico_cor"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/fragment_lista_dynamicListView"
        android:layout_below="@+id/paciente_consulta_list_medico_nome"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/icon_retangulo_verde" />

    <TextView
        android:id="@+id/paciente_list_check_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paciente_consulta_list_medico_cor"
        android:text="@string/paciente_consulta_list_intrucoes"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium">

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/paciente_emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/paciente_listview_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/paciente_layout_aux"
        android:layout_below="@+id/paciente_list_check_titulo"
        android:clickable="true"
        android:divider="#d4bababa"
        android:dividerHeight="2px"
        android:fadeScrollbars="false"
        android:scrollbars="horizontal" />

    <LinearLayout
        android:id="@+id/paciente_layout_aux"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/paciente_consulta_list_btn_ok"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:padding="30px"
            android:text="@string/ok" />

        <Button
            android:id="@+id/paciente_consulta_list_btn_adicionar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="30px"
            android:text="@string/novo_paciente" />


    </LinearLayout>

</RelativeLayout>